
* Reworked backup indexing. There's not much value in having to choose which backup to index
so now all backups as well as the active logs are indexed.

* When the auto-manage instances state changes, clear the heartbeat. This avoids an edge case where
an instance will get cleaned immediately.

* Removed "Restarts When Unlisted" button. It doesn't have any meaning anymore.

1.2.2 - July 12, 2012
=====================
* Major bug: Starting a rolling config from the UI leaked S3 lock files which stopped
future config changes from committing.

1.2.1 - July 12, 2012
=====================
* Issue 32: PseudoLock contained an underscore in the prefix. Thanks to user "nmickuli".

1.2.0 - July 5, 2012
====================
* The S3Client could potentially leak connections due to https://forums.aws.amazon.com/message.jspa?messageID=296676

* Issue 26: Make sure default prefixes don't use underscore as it's reserved

* Include activity class name in log message

* Issue 28: log4j.properties wasn't being written correctly. Thanks to user "mgarski".

* Use the latest Curator version

* Lots of fixes/tweaks for automatic instance management.

* ExhibitorArguments is now constructed via a builder as there are too many combinations for
simple constructors. Note that there is an additional required ExhibitorArgument:
restPort.

* Rolling Config change wasn't handling dead/down instances. It would just hang waiting for the
instance to come back. This doesn't work for instances being removed by automatic instance management.
Now, Rolling Config will skip instances that don't respond in a reasonable time. If they come back on
line they'll get the updated config anyway.

* Down or Not-Serving instances will now get restarted periodically (by a factor of 10 times IntConfigs.CHECK_MS).

* IMPORTANT: For some internal reasons I needed to change the separator in S3 backup keys from "|" to
"/". This will make any current backups inaccessible. I apologize for this.

1.1.0 - June 27, 2012